--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
   - pip install -r test_requirements.txt
 # command to run tests
 script:
-  - python -m unittest discover -s ./tests/integration
-  - python -m unittest discover -s ./tests/unit
+  - python -m "unittest discover -s ./tests/integration"
+  - python -m "unittest discover -s ./tests/unit"
