--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,4 @@ install:
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
 # command to run tests
-script:
-  - python -m "unittest discover -s ./tests/integration"
-  - python -m "unittest discover -s ./tests/unit"
+script: nosetests
