--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,9 @@ install:
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
 
+# environment for testing
+env:
+  - PRIVATE_KEY=pr_test_FjW0q2HMs40Jj3KGua5294sp
+
 # command to run tests
-script: PRIVATE_KEY=pr_test_FjW0q2HMs40Jj3KGua5294sp nosetests
+script: nosetests
