Switch from nose to pytest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,28 +2,10 @@ name: Build and validate
 on: [ push, pull_request ]
 
 jobs:
-  unit-tests:
-    name: Unit tests
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ 2.7, 3.6, 3.9 ]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip -r requirements.txt -r test_requirements.txt
-
-      - name: Run tests
-        run: nosetests -w tests/unit
-
-  integration-tests:
+  tests:
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
-    name: Integration tests
+    name: Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -38,7 +20,7 @@ jobs:
         run: python -m pip install --upgrade pip -r requirements.txt -r test_requirements.txt
 
       - name: Run tests
-        run: nosetests -w tests/integration
+        run: pytest tests
 
   style-check:
     name: Style check
